--- a/index.html
+++ b/index.html
@@ -10,9 +10,11 @@
         <main>
             <section id="intro">
                 <div id="intro-container">
-                    <h1>Joel Pascal Erni</h1>
+                    <h1 id="intro-name-container">
+                        <span id="intro-name"></span><span id="intro-name-cursor">_</span>
+                    </h1>
                     <hr>
-                    <h1>Informatiker Applikationsentwickler</h1>
+                    <h1 id="intro-name-title">Informatiker Applikationsentwickler</h1>
                 </div>
                 <div>
                     <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 330 330" xml:space="preserve">
@@ -20,6 +22,11 @@
                     </svg>
                 </div>
             </section>
+            <section id="me">
+                <h1>About Me</h1>
+                
+            </section>
         </main>
     </body>
+    <script src="script.js"></script>
 </html>
