--- a/index.html
+++ b/index.html
@@ -42,6 +42,8 @@
                 <div id="me-container">
                   <div>
                     <div id="me-grid">
+                      <h1>"For real, for real"</h1>
+                      <h1 style="color: gray; font-size: 2em;">- Joel Erni</h1>
                     </div>
                   </div>
                   <div>
