--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                         <span id="intro-name"></span><span id="intro-name-cursor">_</span>
                     </h1>
                     <hr>
-                    <h1 id="intro-name-title">Informatiker applikationsentwicklung</h1>
+                    <h1 id="intro-name-title">Informatiker Applikationsentwicklung</h1>
                 </div>
                 <svg id="intro-footer-wave" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" style="margin:auto;background:rgba(NaN, NaN, NaN, 0);display:block;z-index:1;position:relative" preserveAspectRatio="xMidYMid" viewBox="0 0 2560 500">
                     <g transform="translate(1280,250) scale(1,-1) translate(-1280,-250)"><linearGradient id="lg-0.7539933704520068" x1="0" x2="1" y1="0" y2="0">
@@ -41,15 +41,17 @@
                 <hr>
                 <div id="me-container">
                   <div>
-                    <div id="me-grid">
-                      <h1>"For real, for real"</h1>
-                      <h1 style="color: gray; font-size: 2em;">- Joel Erni</h1>
-                    </div>
+                    <h1>Hallo, ich bin Joel, Informatiker mit einer Leidenschaft für Code.</h1>
                   </div>
                   <div>
-                    <div id="portrait"></div>
+                    <div id="portrait" class="reveal"></div>
                   </div>
                 </div>
+            </section>
+            <section id="more-me-container">
+              <div >
+                <h1>lmao</h1>
+              </div>
             </section>
         </main>
     </body>
