--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                   </div>
                 </div>
             </section>
-            <section id="more-me-container">
+            <section id="more-me">
               <div >
                 <h1>lmao</h1>
               </div>
