--- a/index.html
+++ b/index.html
@@ -20,16 +20,8 @@
                     <g transform="translate(1280,250) scale(1,-1) translate(-1280,-250)"><linearGradient id="lg-0.7539933704520068" x1="0" x2="1" y1="0" y2="0">
                       <stop stop-color="#ffffff" offset="0"></stop>
                       <stop stop-color="#ffffff" offset="1"></stop>
-                    </linearGradient><path d="" fill="url(#lg-0.7539933704520068)" opacity="0.5">
+                    </linearGradient><path d="" fill="#F9F9F9" opacity="1">
                       <animate attributeName="d" dur="10s" repeatCount="indefinite" keyTimes="0;0.333;0.667;1" calcMode="spline" keySplines="0.5 0 0.5 1;0.5 0 0.5 1;0.5 0 0.5 1" begin="0s" values="M0 0L 0 198.7332065012474Q 256 267.5408838744002  512 237.44181846699607T 1024 173.50409267084785T 1536 198.5330448172738T 2048 177.8308753629498T 2560 240.494517230866L 2560 0 Z;M0 0L 0 236.53420423697276Q 256 202.14416154579996  512 173.05927511011012T 1024 166.02610907307798T 1536 220.95720674088162T 2048 239.39812633987563T 2560 210.19009973744045L 2560 0 Z;M0 0L 0 222.55398086858546Q 256 246.5362168111457  512 228.04267390110485T 1024 209.9197142349353T 1536 221.41794260548983T 2048 204.69430207168594T 2560 227.74830911994584L 2560 0 Z;M0 0L 0 198.7332065012474Q 256 267.5408838744002  512 237.44181846699607T 1024 173.50409267084785T 1536 198.5330448172738T 2048 177.8308753629498T 2560 240.494517230866L 2560 0 Z"></animate>
-                    </path><path d="" fill="url(#lg-0.7539933704520068)" opacity="0.5">
-                      <animate attributeName="d" dur="10s" repeatCount="indefinite" keyTimes="0;0.333;0.667;1" calcMode="spline" keySplines="0.5 0 0.5 1;0.5 0 0.5 1;0.5 0 0.5 1" begin="-2s" values="M0 0L 0 215.89631784720325Q 256 270.7029184018226  512 241.75855630257166T 1024 245.91569976042842T 1536 215.03243123913T 2048 202.87717331144714T 2560 207.73401085330016L 2560 0 Z;M0 0L 0 218.11771308250576Q 256 281.83328727725126  512 239.6762212228402T 1024 235.5593242585464T 1536 246.0399832376488T 2048 208.7118361609849T 2560 235.0559870455435L 2560 0 Z;M0 0L 0 237.25812425020484Q 256 283.7325755570448  512 237.01559800677586T 1024 236.0001540122543T 1536 198.01550149308346T 2048 208.8750901234017T 2560 220.98850407461543L 2560 0 Z;M0 0L 0 215.89631784720325Q 256 270.7029184018226  512 241.75855630257166T 1024 245.91569976042842T 1536 215.03243123913T 2048 202.87717331144714T 2560 207.73401085330016L 2560 0 Z"></animate>
-                    </path><path d="" fill="url(#lg-0.7539933704520068)" opacity="0.5">
-                      <animate attributeName="d" dur="10s" repeatCount="indefinite" keyTimes="0;0.333;0.667;1" calcMode="spline" keySplines="0.5 0 0.5 1;0.5 0 0.5 1;0.5 0 0.5 1" begin="-4s" values="M0 0L 0 247.22228184215157Q 256 243.9859338714484  512 225.185952999418T 1024 240.66624112020793T 1536 214.16462663614692T 2048 238.4997833472161T 2560 186.29494367498964L 2560 0 Z;M0 0L 0 213.79316879875302Q 256 198.49414768840455  512 178.84529641267082T 1024 218.22007371915444T 1536 219.13568614169262T 2048 220.8770408451938T 2560 245.4439748669207L 2560 0 Z;M0 0L 0 164.57857185264078Q 256 278.14099082072175  512 243.3490181822518T 1024 167.56292006671362T 1536 168.34763839356125T 2048 245.13585577923658T 2560 168.29094912684968L 2560 0 Z;M0 0L 0 247.22228184215157Q 256 243.9859338714484  512 225.185952999418T 1024 240.66624112020793T 1536 214.16462663614692T 2048 238.4997833472161T 2560 186.29494367498964L 2560 0 Z"></animate>
-                    </path><path d="" fill="url(#lg-0.7539933704520068)" opacity="0.5">
-                      <animate attributeName="d" dur="10s" repeatCount="indefinite" keyTimes="0;0.333;0.667;1" calcMode="spline" keySplines="0.5 0 0.5 1;0.5 0 0.5 1;0.5 0 0.5 1" begin="-6s" values="M0 0L 0 191.4791782469945Q 256 212.3486672638663  512 180.02161962698818T 1024 190.04438353879516T 1536 226.77062090059948T 2048 241.2510948710285T 2560 175.78508601284372L 2560 0 Z;M0 0L 0 214.12157326965348Q 256 204.369108429763  512 182.23724284599027T 1024 226.31796293771433T 1536 199.16153712109738T 2048 182.03975022385444T 2560 196.00269506002485L 2560 0 Z;M0 0L 0 198.1520150644257Q 256 243.01453665115417  512 223.0370833665981T 1024 184.85388273285184T 1536 203.1321866995434T 2048 182.12100395738858T 2560 223.90820569084136L 2560 0 Z;M0 0L 0 191.4791782469945Q 256 212.3486672638663  512 180.02161962698818T 1024 190.04438353879516T 1536 226.77062090059948T 2048 241.2510948710285T 2560 175.78508601284372L 2560 0 Z"></animate>
-                    </path><path d="" fill="url(#lg-0.7539933704520068)" opacity="0.5">
-                      <animate attributeName="d" dur="10s" repeatCount="indefinite" keyTimes="0;0.333;0.667;1" calcMode="spline" keySplines="0.5 0 0.5 1;0.5 0 0.5 1;0.5 0 0.5 1" begin="-8s" values="M0 0L 0 200.17357241527645Q 256 238.65471635989354  512 194.21178101932816T 1024 221.16993179263721T 1536 193.915451256918T 2048 194.49917387298316T 2560 199.64641067575732L 2560 0 Z;M0 0L 0 200.60155247971204Q 256 204.60384523088987  512 176.67795013416017T 1024 216.51752904144809T 1536 210.52069245722652T 2048 217.68584685534685T 2560 215.68866505042234L 2560 0 Z;M0 0L 0 196.62913804166487Q 256 212.90946192648533  512 166.67597295713907T 1024 175.62892348184207T 1536 208.74818254376075T 2048 194.08369727375566T 2560 243.98553609497233L 2560 0 Z;M0 0L 0 200.17357241527645Q 256 238.65471635989354  512 194.21178101932816T 1024 221.16993179263721T 1536 193.915451256918T 2048 194.49917387298316T 2560 199.64641067575732L 2560 0 Z"></animate>
                     </path></g>
                 </svg>
                 <svg id="intro-footer-arrow" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 330 330" xml:space="preserve">
@@ -37,20 +29,56 @@
                 </svg>
             </section>
             <section id="me">
-                <h1>About Me</h1>
-                <hr>
                 <div id="me-container">
                   <div>
-                    <h1>Hallo, ich bin Joel, Informatiker mit einer Leidenschaft für Code.</h1>
+                    <p>Hallo, ich bin Joel, Informatiker mit einer Leidenschaft für Code.</p>
                   </div>
                   <div>
-                    <div id="portrait" class="reveal"></div>
+                    <img id="portrait" class="reveal" src="/content/image/joel_ol.png" alt="Portrait von Joel">
                   </div>
                 </div>
             </section>
             <section id="more-me">
-              <div >
-                <h1>lmao</h1>
+              <svg id="more-me-wave" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" style="margin:auto;background:rgba(NaN, NaN, NaN, 0);display:block;z-index:1;position:relative" preserveAspectRatio="xMidYMid" viewBox="0 0 2560 500"><g transform="translate(1280,250) scale(-1,1) translate(-1280,-250)"><linearGradient id="lg-0.7539933704520068" x1="0" x2="1" y1="0" y2="0"><stop stop-color="#ffffff" offset="0"></stop><stop stop-color="#ffffff" offset="1"></stop></linearGradient><path d="" fill="#F9F9F9" opacity="1"><animate attributeName="d" dur="10s" repeatCount="indefinite" keyTimes="0;0.333;0.667;1" calcMode="spline" keySplines="0.5 0 0.5 1;0.5 0 0.5 1;0.5 0 0.5 1" begin="0s" values="M0 0L 0 198.7332065012474Q 256 267.5408838744002  512 237.44181846699607T 1024 173.50409267084785T 1536 198.5330448172738T 2048 177.8308753629498T 2560 240.494517230866L 2560 0 Z;M0 0L 0 236.53420423697276Q 256 202.14416154579996  512 173.05927511011012T 1024 166.02610907307798T 1536 220.95720674088162T 2048 239.39812633987563T 2560 210.19009973744045L 2560 0 Z;M0 0L 0 222.55398086858546Q 256 246.5362168111457  512 228.04267390110485T 1024 209.9197142349353T 1536 221.41794260548983T 2048 204.69430207168594T 2560 227.74830911994584L 2560 0 Z;M0 0L 0 198.7332065012474Q 256 267.5408838744002  512 237.44181846699607T 1024 173.50409267084785T 1536 198.5330448172738T 2048 177.8308753629498T 2560 240.494517230866L 2560 0 Z"></animate></path></g></svg>
+              <div id="more-me-container">
+                <h1 id="me-title">// About Me</h1>
+                <hr>
+                <div id="me-information">
+                  <div id="personal">
+                    <h2>&lt; Pers&ouml;nliche Informationen /&gt;</h2>
+                    <div class="more-me-container">
+                      <div class="more-me-item">
+                        <h3>Name</h3>
+                        <p>Joel Pascal Erni</p>
+                      </div>
+                      <div class="more-me-item">
+                        <h3>Geburtstag</h3>
+                        <p>12. Januar</p>
+                      </div>
+                      <div class="more-me-item">
+                        <h3>Wohnort</h3>
+                        <p>Kriens, Luzern</p>
+                      </div>
+                    </div>
+                  </div>
+                  <div id="preferences">
+                    <h2>&lt; Vorlieben /&gt;</h2>
+                    <div class="more-me-container">
+                      <div class="more-me-item">
+                        <h3>Hobbys</h3>
+                        <p>Videospiele, Aktivitäten mit Freunden, Musik</p>
+                      </div>
+                      <div class="more-me-item">
+                        <h3>Lieblingsmusiker</h3>
+                        <p>Masayoshi Takanaka</p>
+                      </div>
+                      <div class="more-me-item">
+                        <h3>Lieblingsfarbe</h3>
+                        <p>Indigo</p>
+                      </div>
+                    </div>
+                  </div>
+                </div>
               </div>
             </section>
         </main>
