--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                     <g transform="translate(1280,250) scale(1,-1) translate(-1280,-250)"><linearGradient id="lg-0.7539933704520068" x1="0" x2="1" y1="0" y2="0">
                       <stop stop-color="#ffffff" offset="0"></stop>
                       <stop stop-color="#ffffff" offset="1"></stop>
-                    </linearGradient><path d="" fill="#F9F9F9" opacity="1">
+                    </linearGradient><path d="" opacity="1">
                       <animate attributeName="d" dur="10s" repeatCount="indefinite" keyTimes="0;0.333;0.667;1" calcMode="spline" keySplines="0.5 0 0.5 1;0.5 0 0.5 1;0.5 0 0.5 1" begin="0s" values="M0 0L 0 198.7332065012474Q 256 267.5408838744002  512 237.44181846699607T 1024 173.50409267084785T 1536 198.5330448172738T 2048 177.8308753629498T 2560 240.494517230866L 2560 0 Z;M0 0L 0 236.53420423697276Q 256 202.14416154579996  512 173.05927511011012T 1024 166.02610907307798T 1536 220.95720674088162T 2048 239.39812633987563T 2560 210.19009973744045L 2560 0 Z;M0 0L 0 222.55398086858546Q 256 246.5362168111457  512 228.04267390110485T 1024 209.9197142349353T 1536 221.41794260548983T 2048 204.69430207168594T 2560 227.74830911994584L 2560 0 Z;M0 0L 0 198.7332065012474Q 256 267.5408838744002  512 237.44181846699607T 1024 173.50409267084785T 1536 198.5330448172738T 2048 177.8308753629498T 2560 240.494517230866L 2560 0 Z"></animate>
                     </path></g>
                 </svg>
@@ -41,11 +41,10 @@
             <section id="more-me">
               <svg id="more-me-wave" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" style="margin:auto;background:rgba(NaN, NaN, NaN, 0);display:block;z-index:1;position:relative" preserveAspectRatio="xMidYMid" viewBox="0 0 2560 500"><g transform="translate(1280,250) scale(-1,1) translate(-1280,-250)"><linearGradient id="lg-0.7539933704520068" x1="0" x2="1" y1="0" y2="0"><stop stop-color="#ffffff" offset="0"></stop><stop stop-color="#ffffff" offset="1"></stop></linearGradient><path d="" fill="#F9F9F9" opacity="1"><animate attributeName="d" dur="10s" repeatCount="indefinite" keyTimes="0;0.333;0.667;1" calcMode="spline" keySplines="0.5 0 0.5 1;0.5 0 0.5 1;0.5 0 0.5 1" begin="0s" values="M0 0L 0 198.7332065012474Q 256 267.5408838744002  512 237.44181846699607T 1024 173.50409267084785T 1536 198.5330448172738T 2048 177.8308753629498T 2560 240.494517230866L 2560 0 Z;M0 0L 0 236.53420423697276Q 256 202.14416154579996  512 173.05927511011012T 1024 166.02610907307798T 1536 220.95720674088162T 2048 239.39812633987563T 2560 210.19009973744045L 2560 0 Z;M0 0L 0 222.55398086858546Q 256 246.5362168111457  512 228.04267390110485T 1024 209.9197142349353T 1536 221.41794260548983T 2048 204.69430207168594T 2560 227.74830911994584L 2560 0 Z;M0 0L 0 198.7332065012474Q 256 267.5408838744002  512 237.44181846699607T 1024 173.50409267084785T 1536 198.5330448172738T 2048 177.8308753629498T 2560 240.494517230866L 2560 0 Z"></animate></path></g></svg>
               <div id="more-me-container">
-                <h1 id="me-title">// About Me</h1>
-                <hr>
                 <div id="me-information">
-                  <div id="personal">
-                    <h2>&lt; Pers&ouml;nliche Informationen /&gt;</h2>
+                  <div id="personal" class="reveal">
+                    <h2>&lt; Allgemein /&gt;</h2>
+                    <hr>
                     <div class="more-me-container">
                       <div class="more-me-item">
                         <h3>Name</h3>
@@ -61,8 +60,9 @@
                       </div>
                     </div>
                   </div>
-                  <div id="preferences">
-                    <h2>&lt; Vorlieben /&gt;</h2>
+                  <div id="preferences" class="reveal">
+                    <h2>&lt; Interessen /&gt;</h2>
+                    <hr>
                     <div class="more-me-container">
                       <div class="more-me-item">
                         <h3>Hobbys</h3>
@@ -78,8 +78,42 @@
                       </div>
                     </div>
                   </div>
+                  <div id="experience" class="reveal">
+                    <h2>&lt; Informatik /&gt;</h2>
+                    <hr>
+                    <div class="more-me-container experience">
+                      <div class="more-me-item">
+                        <h3>Programmiersprachen</h3>
+                        <p>C#, PHP, Python, HTML, CSS/SCSS, JavaScript, MySQL, Powershell</p>
+                      </div>
+                      <div class="more-me-item">
+                        <h3>Coding Softwares</h3>
+                        <p>Visual Studio, VS Code, PhpStorm, Unity</p>
+                      </div>
+                      <div class="more-me-item">
+                        <h3>Frameworks</h3>
+                        <p>Laravel, Blazor, Unity</p>
+                      </div>
+                      <div class="more-me-item">
+                        <h3>Office Softwares</h3>
+                        <p>Adobe Creative Cloud, Microsoft Office</p>
+                      </div>
+                      <div class="more-me-item">
+                        <h3>Sonstige Softwares</h3>
+                        <p>Blender</p>
+                      </div>   
+                    </div>
+                  </div>
                 </div>
               </div>
+              <svg id="me-footer-wave" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" style="margin:auto;background:rgba(NaN, NaN, NaN, 0);display:block;z-index:1;position:relative" preserveAspectRatio="xMidYMid" viewBox="0 0 2560 500">
+                <g transform="translate(1280,250) scale(1,-1) translate(-1280,-250)"><linearGradient id="lg-0.7539933704520068" x1="0" x2="1" y1="0" y2="0">
+                  <stop stop-color="#ffffff" offset="0"></stop>
+                  <stop stop-color="#ffffff" offset="1"></stop>
+                </linearGradient><path d="" opacity="1">
+                  <animate attributeName="d" dur="10s" repeatCount="indefinite" keyTimes="0;0.333;0.667;1" calcMode="spline" keySplines="0.5 0 0.5 1;0.5 0 0.5 1;0.5 0 0.5 1" begin="0s" values="M0 0L 0 198.7332065012474Q 256 267.5408838744002  512 237.44181846699607T 1024 173.50409267084785T 1536 198.5330448172738T 2048 177.8308753629498T 2560 240.494517230866L 2560 0 Z;M0 0L 0 236.53420423697276Q 256 202.14416154579996  512 173.05927511011012T 1024 166.02610907307798T 1536 220.95720674088162T 2048 239.39812633987563T 2560 210.19009973744045L 2560 0 Z;M0 0L 0 222.55398086858546Q 256 246.5362168111457  512 228.04267390110485T 1024 209.9197142349353T 1536 221.41794260548983T 2048 204.69430207168594T 2560 227.74830911994584L 2560 0 Z;M0 0L 0 198.7332065012474Q 256 267.5408838744002  512 237.44181846699607T 1024 173.50409267084785T 1536 198.5330448172738T 2048 177.8308753629498T 2560 240.494517230866L 2560 0 Z"></animate>
+                </path></g>
+            </svg>
             </section>
         </main>
     </body>
