--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                     <hr>
                     <h1 id="intro-name-title">Informatiker Applikationsentwicklung</h1>
                 </div>
-                <svg id="intro-footer-wave" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" style="margin:auto;background:rgba(NaN, NaN, NaN, 0);display:block;z-index:1;position:relative" preserveAspectRatio="xMidYMid" viewBox="0 0 2560 500">
+                <svg id="intro-footer-wave" class="svg-wave" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" style="margin:auto;background:rgba(NaN, NaN, NaN, 0);display:block;z-index:1;position:relative" preserveAspectRatio="xMidYMid" viewBox="0 0 2560 500">
                     <g transform="translate(1280,250) scale(1,-1) translate(-1280,-250)"><linearGradient id="lg-0.7539933704520068" x1="0" x2="1" y1="0" y2="0">
                       <stop stop-color="#ffffff" offset="0"></stop>
                       <stop stop-color="#ffffff" offset="1"></stop>
@@ -24,14 +24,14 @@
                       <animate attributeName="d" dur="10s" repeatCount="indefinite" keyTimes="0;0.333;0.667;1" calcMode="spline" keySplines="0.5 0 0.5 1;0.5 0 0.5 1;0.5 0 0.5 1" begin="0s" values="M0 0L 0 198.7332065012474Q 256 267.5408838744002  512 237.44181846699607T 1024 173.50409267084785T 1536 198.5330448172738T 2048 177.8308753629498T 2560 240.494517230866L 2560 0 Z;M0 0L 0 236.53420423697276Q 256 202.14416154579996  512 173.05927511011012T 1024 166.02610907307798T 1536 220.95720674088162T 2048 239.39812633987563T 2560 210.19009973744045L 2560 0 Z;M0 0L 0 222.55398086858546Q 256 246.5362168111457  512 228.04267390110485T 1024 209.9197142349353T 1536 221.41794260548983T 2048 204.69430207168594T 2560 227.74830911994584L 2560 0 Z;M0 0L 0 198.7332065012474Q 256 267.5408838744002  512 237.44181846699607T 1024 173.50409267084785T 1536 198.5330448172738T 2048 177.8308753629498T 2560 240.494517230866L 2560 0 Z"></animate>
                     </path></g>
                 </svg>
-                <svg id="intro-footer-arrow" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 330 330" xml:space="preserve">
+                <svg id="intro-footer-arrow" class="svg-wave" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 330 330" xml:space="preserve">
                     <path id="XMLID_225_" d="M325.607,79.393c-5.857-5.857-15.355-5.858-21.213,0.001l-139.39,139.393L25.607,79.393  c-5.857-5.857-15.355-5.858-21.213,0.001c-5.858,5.858-5.858,15.355,0,21.213l150.004,150c2.813,2.813,6.628,4.393,10.606,4.393  s7.794-1.581,10.606-4.394l149.996-150C331.465,94.749,331.465,85.251,325.607,79.393z"/>
                 </svg>
             </section>
             <section id="me">
                 <div id="me-container">
                   <div>
-                    <p>Hallo, ich bin Joel, Informatiker mit einer Leidenschaft für Code.</p>
+                    <p class="reveal">Hallo, ich bin Joel, Informatiker mit einer Leidenschaft für Code.</p>
                   </div>
                   <div>
                     <img id="portrait" class="reveal" src="/content/image/joel_ol.png" alt="Portrait von Joel">
@@ -39,11 +39,11 @@
                 </div>
             </section>
             <section id="more-me">
-              <svg id="more-me-wave" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" style="margin:auto;background:rgba(NaN, NaN, NaN, 0);display:block;z-index:1;position:relative" preserveAspectRatio="xMidYMid" viewBox="0 0 2560 500"><g transform="translate(1280,250) scale(-1,1) translate(-1280,-250)"><linearGradient id="lg-0.7539933704520068" x1="0" x2="1" y1="0" y2="0"><stop stop-color="#ffffff" offset="0"></stop><stop stop-color="#ffffff" offset="1"></stop></linearGradient><path d="" fill="#F9F9F9" opacity="1"><animate attributeName="d" dur="10s" repeatCount="indefinite" keyTimes="0;0.333;0.667;1" calcMode="spline" keySplines="0.5 0 0.5 1;0.5 0 0.5 1;0.5 0 0.5 1" begin="0s" values="M0 0L 0 198.7332065012474Q 256 267.5408838744002  512 237.44181846699607T 1024 173.50409267084785T 1536 198.5330448172738T 2048 177.8308753629498T 2560 240.494517230866L 2560 0 Z;M0 0L 0 236.53420423697276Q 256 202.14416154579996  512 173.05927511011012T 1024 166.02610907307798T 1536 220.95720674088162T 2048 239.39812633987563T 2560 210.19009973744045L 2560 0 Z;M0 0L 0 222.55398086858546Q 256 246.5362168111457  512 228.04267390110485T 1024 209.9197142349353T 1536 221.41794260548983T 2048 204.69430207168594T 2560 227.74830911994584L 2560 0 Z;M0 0L 0 198.7332065012474Q 256 267.5408838744002  512 237.44181846699607T 1024 173.50409267084785T 1536 198.5330448172738T 2048 177.8308753629498T 2560 240.494517230866L 2560 0 Z"></animate></path></g></svg>
+              <svg id="more-me-wave" class="svg-wave" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" style="margin:auto;background:rgba(NaN, NaN, NaN, 0);display:block;z-index:1;position:relative" preserveAspectRatio="xMidYMid" viewBox="0 0 2560 500"><g transform="translate(1280,250) scale(-1,1) translate(-1280,-250)"><linearGradient id="lg-0.7539933704520068" x1="0" x2="1" y1="0" y2="0"><stop stop-color="#ffffff" offset="0"></stop><stop stop-color="#ffffff" offset="1"></stop></linearGradient><path d="" opacity="1"><animate attributeName="d" dur="10s" repeatCount="indefinite" keyTimes="0;0.333;0.667;1" calcMode="spline" keySplines="0.5 0 0.5 1;0.5 0 0.5 1;0.5 0 0.5 1" begin="0s" values="M0 0L 0 198.7332065012474Q 256 267.5408838744002  512 237.44181846699607T 1024 173.50409267084785T 1536 198.5330448172738T 2048 177.8308753629498T 2560 240.494517230866L 2560 0 Z;M0 0L 0 236.53420423697276Q 256 202.14416154579996  512 173.05927511011012T 1024 166.02610907307798T 1536 220.95720674088162T 2048 239.39812633987563T 2560 210.19009973744045L 2560 0 Z;M0 0L 0 222.55398086858546Q 256 246.5362168111457  512 228.04267390110485T 1024 209.9197142349353T 1536 221.41794260548983T 2048 204.69430207168594T 2560 227.74830911994584L 2560 0 Z;M0 0L 0 198.7332065012474Q 256 267.5408838744002  512 237.44181846699607T 1024 173.50409267084785T 1536 198.5330448172738T 2048 177.8308753629498T 2560 240.494517230866L 2560 0 Z"></animate></path></g></svg>
               <div id="more-me-container">
                 <div id="me-information">
                   <div id="personal" class="reveal">
-                    <h2>&lt; Allgemein /&gt;</h2>
+                    <h2>Allgemein</h2>
                     <hr>
                     <div class="more-me-container">
                       <div class="more-me-item">
@@ -61,7 +61,7 @@
                     </div>
                   </div>
                   <div id="preferences" class="reveal">
-                    <h2>&lt; Interessen /&gt;</h2>
+                    <h2>Interessen</h2>
                     <hr>
                     <div class="more-me-container">
                       <div class="more-me-item">
@@ -79,7 +79,7 @@
                     </div>
                   </div>
                   <div id="experience" class="reveal">
-                    <h2>&lt; Informatik /&gt;</h2>
+                    <h2>Informatik</h2>
                     <hr>
                     <div class="more-me-container experience">
                       <div class="more-me-item">
@@ -96,24 +96,52 @@
                       </div>
                       <div class="more-me-item">
                         <h3>Office Softwares</h3>
-                        <p>Adobe Creative Cloud, Microsoft Office</p>
+                        <p>Adobe CC, MS Office</p>
                       </div>
                       <div class="more-me-item">
-                        <h3>Sonstige Softwares</h3>
+                        <h3>Plattformen</h3>
+                        <p>Windows, Linux</p>
+                      </div>
+                      <div class="more-me-item">
+                        <h3>3D-Software</h3>
                         <p>Blender</p>
                       </div>   
                     </div>
                   </div>
                 </div>
               </div>
-              <svg id="me-footer-wave" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" style="margin:auto;background:rgba(NaN, NaN, NaN, 0);display:block;z-index:1;position:relative" preserveAspectRatio="xMidYMid" viewBox="0 0 2560 500">
+              <svg id="me-footer-wave" class="svg-wave" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" style="margin:auto;background:rgba(NaN, NaN, NaN, 0);display:block;z-index:1;position:relative" preserveAspectRatio="xMidYMid" viewBox="0 0 2560 500">
                 <g transform="translate(1280,250) scale(1,-1) translate(-1280,-250)"><linearGradient id="lg-0.7539933704520068" x1="0" x2="1" y1="0" y2="0">
                   <stop stop-color="#ffffff" offset="0"></stop>
                   <stop stop-color="#ffffff" offset="1"></stop>
                 </linearGradient><path d="" opacity="1">
                   <animate attributeName="d" dur="10s" repeatCount="indefinite" keyTimes="0;0.333;0.667;1" calcMode="spline" keySplines="0.5 0 0.5 1;0.5 0 0.5 1;0.5 0 0.5 1" begin="0s" values="M0 0L 0 198.7332065012474Q 256 267.5408838744002  512 237.44181846699607T 1024 173.50409267084785T 1536 198.5330448172738T 2048 177.8308753629498T 2560 240.494517230866L 2560 0 Z;M0 0L 0 236.53420423697276Q 256 202.14416154579996  512 173.05927511011012T 1024 166.02610907307798T 1536 220.95720674088162T 2048 239.39812633987563T 2560 210.19009973744045L 2560 0 Z;M0 0L 0 222.55398086858546Q 256 246.5362168111457  512 228.04267390110485T 1024 209.9197142349353T 1536 221.41794260548983T 2048 204.69430207168594T 2560 227.74830911994584L 2560 0 Z;M0 0L 0 198.7332065012474Q 256 267.5408838744002  512 237.44181846699607T 1024 173.50409267084785T 1536 198.5330448172738T 2048 177.8308753629498T 2560 240.494517230866L 2560 0 Z"></animate>
                 </path></g>
-            </svg>
+              </svg>
+            </section>
+            <section id="projects">
+              <h1 class="reveal">Projects</h1>
+              <hr>
+              <div id="project-container">
+                <div class="project-item reveal">
+                  <div class="project-image-container">
+                    <h2>Forza Horizon 5 webseite</h2>
+                  </div>
+                  <p>Eine Webseite über das Spiel Forza Horizon 5. HTML, CSS, Javascript, PHP und SQL wurde für die Programmierung verwendet.</p>
+                </div>
+                <div class="project-item reveal">
+                  <div class="project-image-container">
+                    <h2>!Star Wars</h2>
+                  </div>
+                  <p>Ein Jump'n'Run-/Story-Spiel, das von Star Wars inspiriert ist. Es wurde von Lucas S. und Elias S. programmiert.</p>
+                </div>
+                <div class="project-item reveal">
+                  <div class="project-image-container">
+                    <h2>Memelab Newsletter</h2>
+                  </div>
+                  <p>Ein Meme-Newsletter, in dem man eigene Memes einreichen kann. Auf der Webseite werden die Memes aufgelistet, für die man auch abstimmen kann.</p>
+                </div>              
+              </div>
             </section>
         </main>
     </body>
