--- a/index.html
+++ b/index.html
@@ -58,10 +58,14 @@
                         <h3>Wohnort</h3>
                         <p>Kriens, Luzern</p>
                       </div>
+                      <div class="more-me-item">
+                        <h3>Tätigkeit</h3>
+                        <p>Informatikmittelschüler im 3. Jahr</p>
+                      </div>
                     </div>
                   </div>
                   <div id="preferences" class="reveal">
-                    <h2>Interessen</h2>
+                    <h2>Interessen / Vorlieben</h2>
                     <hr>
                     <div class="more-me-container">
                       <div class="more-me-item">
@@ -105,6 +109,10 @@
                       <div class="more-me-item">
                         <h3>3D-Software</h3>
                         <p>Blender</p>
+                      </div>
+                      <div class="more-me-item">
+                        <h3>Sonstiges</h3>
+                        <p><a href="https://github.com/JoelErni" target="_blank">GitHub</a></p>
                       </div>   
                     </div>
                   </div>
@@ -120,22 +128,22 @@
               </svg>
             </section>
             <section id="projects">
-              <h1 class="reveal">Projects</h1>
+              <h1 class="reveal">Projekte</h1>
               <hr>
-              <div id="project-container">
-                <div class="project-item reveal">
+              <div id="project-container" class="reveal">
+                <div class="project-item">
                   <div class="project-image-container">
-                    <h2>Forza Horizon 5 webseite</h2>
+                    <h2><a href="https://ipt3.joel-erni1.bbzwinf.ch/" target="_blank">Forza Horizon 5 webseite</a></h2>
                   </div>
                   <p>Eine Webseite über das Spiel Forza Horizon 5. HTML, CSS, Javascript, PHP und SQL wurde für die Programmierung verwendet.</p>
                 </div>
-                <div class="project-item reveal">
+                <div class="project-item">
                   <div class="project-image-container">
-                    <h2>!Star Wars</h2>
+                    <h2><a href="https://github.com/JoelErni/IPT_4.1-Unity" target="_blank">!Star Wars</a></h2>
                   </div>
-                  <p>Ein Jump'n'Run-/Story-Spiel, das von Star Wars inspiriert ist. Es wurde von Lucas S. und Elias S. programmiert.</p>
+                  <p>Ein Jump'n'Run-/Story-Spiel, das von Star Wars inspiriert ist. Das Spiel wurde von mir, Lucas S. und Elias S. programmiert.</p>
                 </div>
-                <div class="project-item reveal">
+                <div class="project-item">
                   <div class="project-image-container">
                     <h2>Memelab Newsletter</h2>
                   </div>
@@ -143,6 +151,21 @@
                 </div>              
               </div>
             </section>
+            <footer>
+              <svg id="footer-wave" class="svg-wave" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" style="margin:auto;background:rgba(NaN, NaN, NaN, 0);display:block;z-index:1;position:relative" preserveAspectRatio="xMidYMid" viewBox="0 0 2560 500">
+                <g transform="translate(1280,250) scale(1,1) translate(-1280,-250)"><linearGradient id="lg-0.7539933704520068" x1="0" x2="1" y1="0" y2="0">
+                  <stop stop-color="#ffffff" offset="0"></stop>
+                  <stop stop-color="#ffffff" offset="1"></stop>
+                </linearGradient><path d="" opacity="1">
+                  <animate attributeName="d" dur="10s" repeatCount="indefinite" keyTimes="0;0.333;0.667;1" calcMode="spline" keySplines="0.5 0 0.5 1;0.5 0 0.5 1;0.5 0 0.5 1" begin="0s" values="M0 0L 0 198.7332065012474Q 256 267.5408838744002  512 237.44181846699607T 1024 173.50409267084785T 1536 198.5330448172738T 2048 177.8308753629498T 2560 240.494517230866L 2560 0 Z;M0 0L 0 236.53420423697276Q 256 202.14416154579996  512 173.05927511011012T 1024 166.02610907307798T 1536 220.95720674088162T 2048 239.39812633987563T 2560 210.19009973744045L 2560 0 Z;M0 0L 0 222.55398086858546Q 256 246.5362168111457  512 228.04267390110485T 1024 209.9197142349353T 1536 221.41794260548983T 2048 204.69430207168594T 2560 227.74830911994584L 2560 0 Z;M0 0L 0 198.7332065012474Q 256 267.5408838744002  512 237.44181846699607T 1024 173.50409267084785T 1536 198.5330448172738T 2048 177.8308753629498T 2560 240.494517230866L 2560 0 Z"></animate>
+                </path></g>
+              </svg>
+              <div id="footer-container">
+                <p>Font: <a href="https://www.dafont.com/louis-george-cafe.font" target="_blank">Louis George Café</a></p>
+                <p>E-mail:<br><a href="mailto:joel.eri@hispeed.ch">joel.erni@hispeed.ch</a></p>
+                <p>Webseite: 7.76MB, 11 Dateien</p>
+              </div>
+            </footer>
         </main>
     </body>
     <script src="script.js"></script>
